--- a/templates/frontend/vcledit.html
+++ b/templates/frontend/vcledit.html
@@ -2,6 +2,7 @@
 
 {% block body %}
         {{ block.super }}
+        {{ vcltext }}
 <div class="container">
     <h2>VCL editor</h2>
     <div class="control-group">
