--- a/templates/frontend/dashboard.html
+++ b/templates/frontend/dashboard.html
@@ -1,12 +1,27 @@
 <script type='text/javascript' src='https://www.google.com/jsapi'></script>
+<script type="text/javascript" src="/static/ydn.db-jquery-0.2.4.js"></script>
 <script type="text/javascript">
     
     function drawCharts(){
         // Init stats db
-        var db = openDatabase('STATSDB', '1.0', 'Stats DB', 100 * 1024);
-        db.transaction(function(tx) {
-            tx.executeSql("create table if not exists stats(date TIMESTAMP DEFAULT (datetime('now','localtime')), statname TEXT, value INTEGER DEFAULT 0)");
-        });
+        var schema = {
+            stores:[{
+                name:'stats',
+                keyPath:'timeStamp',
+                type: 'TEXT',
+                indexes: [
+                {
+                    keyPath: 'statname',
+                    type: 'TEXT'
+                }
+            ]
+        }]
+        };
+        var db = new ydn.db.Storage('STATSDB');
+        // var db = openDatabase('STATSDB', '1.0', 'Stats DB', 100 * 1024);
+        // db.transaction(function(tx) {
+        //     tx.executeSql("create table if not exists stats(date TIMESTAMP DEFAULT (datetime('now','localtime')), statname TEXT, value INTEGER DEFAULT 0)");
+        // });
 
         // Gauge cachehitrate
         var hitrate_data = google.visualization.arrayToDataTable([
@@ -67,18 +82,22 @@
         setInterval(function() {
             $.get("/api/cache_stats/", function(data) {
                 
-                // executeSQL('SELECT title FROM movies WHERE id = ?', [id]);
                 hitmiss_data.setValue(0, 1, parseInt(data.Cache_Hits));
                 hitmiss_data.setValue(1, 1, parseInt(data.Cache_Misses));
                 hitmiss_chart.draw(hitmiss_data, hitmiss_options);
-                db.transaction(function(tx) {
-                    var hits = parseInt(data.Cache_Hits);
-                    var miss = parseInt(data.Cache_Misses);
-                    tx.executeSql("insert into stats(statname, value) values ('cache_hits', ?)",[hits]);
-                    tx.executeSql("insert into stats(statname, value) values ('cache_misses', ?)",[miss]);
-                });
+                // db.transaction(function(tx) {
+                //     var hits = parseInt(data.Cache_Hits);
+                //     var miss = parseInt(data.Cache_Misses);
+                //     tx.executeSql("insert into stats(statname, value) values ('cache_hits', ?)",[hits]);
+                //     tx.executeSql("insert into stats(statname, value) values ('cache_misses', ?)",[miss]);
+                // });
+                var d = new Date();
+                recordhist = { date: d, statname: 'cache_hits', value: data.Cache_Hits };
+                db.put({name: 'STATSDB', keyPath: 'date'}, recordhist);
+                recordmiss = { date: d, statname: 'cache_miss', value: data.Cache_Misses };
+                db.put({name: 'STATSDB', keyPath: 'date'}, recordmiss);
             }, "json");
-            }, 5000);
+        }, 5000);
 
         // Barchart client request
         var request_options = {
@@ -97,12 +116,15 @@
             $.get("/api/cache_stats/", function(data) {
                 request_data.setValue(0, 1, parseInt(data.Client_Requests));
                 request_chart.draw(request_data, request_options);
-                db.transaction(function(tx) {
-                    var reqs = parseInt(data.Client_Requests);
-                    tx.executeSql("insert into stats(statname, value) values ('client_requests', ?)",[reqs]);
-                });
+                // db.transaction(function(tx) {
+                //     var reqs = parseInt(data.Client_Requests);
+                //     tx.executeSql("insert into stats(statname, value) values ('client_requests', ?)",[reqs]);
+                // });
+                var d = new Date();
+                recordclireq = { date: d, statname: 'client_requests', value: data.Client_Requests };
+                db.put({name: 'STATSDB', keyPath: 'date'}, recordclireq);
             }, "json");
-            }, 5000);
+        }, 5000);
 
         // Line chart Client requests with websql history
         var statsarray = new Array();
