--- a/templates/frontend/dashboard.html
+++ b/templates/frontend/dashboard.html
@@ -1,24 +1,15 @@
 <script type='text/javascript' src='https://www.google.com/jsapi'></script>
-<script type="text/javascript" src="/static/ydn.db-jquery-0.2.4.js"></script>
 <script type="text/javascript">
     
     function drawCharts(){
         // Init stats db
-        var schema = {
-            stores:[{
-                name:'stats',
-                keyPath:'timeStamp',
-                type: 'TEXT',
-                indexes: [
-                {
-                    keyPath: 'statname',
-                    type: 'TEXT'
-                }
-            ]
-        }]
-        };
-        var db = new ydn.db.Storage('STATSDB');
-        
+        var db = openDatabase('STATSDB', '1.0', 'Stats DB', 100 * 1024);
+        db.transaction(function(tx) {
+            tx.executeSql("create table if not exists stats(statdate TIMESTAMP DEFAULT (datetime('now','localtime')), statname TEXT, statvalue INTEGER DEFAULT 0)");
+            // Delete records older of 1 day
+            tx.executeSql("delete from stats where statdate < datetime('now','localtime','-1 day');");
+        });
+
         // Gauge cachehitrate
         var hitrate_data = google.visualization.arrayToDataTable([
             ['Label', 'Value'],
@@ -26,7 +17,7 @@
         ]);
 
         var hitrate_options = {
-            width: 200, height: 120,
+            width: 400, height: 120,
             redFrom: 0, redTo: 20,
             yellowFrom:20, yellowTo: 40,
             greenFrom:80, greenTo: 100,
@@ -65,6 +56,7 @@
             width:600, height:200,
             legend: 'none',
             colors: ['green'],
+            // vAxis: {title: 'HITS',  titleTextStyle: {color: 'red'}},
         }
         var hitmiss_data = google.visualization.arrayToDataTable([
             ['Label', 'Value'],
@@ -76,41 +68,19 @@
 
         setInterval(function() {
             $.get("/api/cache_stats/", function(data) {
+                
+                // executeSQL('SELECT title FROM movies WHERE id = ?', [id]);
                 hitmiss_data.setValue(0, 1, parseInt(data.Cache_Hits));
                 hitmiss_data.setValue(1, 1, parseInt(data.Cache_Misses));
                 hitmiss_chart.draw(hitmiss_data, hitmiss_options);
-                var now = new Date();
-                recordhist = {
-                    date: now,
-                    statname: 'cache_hits',
-                    value: data.Cache_Hits
-                };
-                recordmiss = {
-                    date: now,
-                    statname: 'cache_miss',
-                    value: data.Cache_Misses
-                };
-
-                req = db.put('STATSDB', [ recordhist, recordmiss ] );
-                // db.put({name: 'STATSDB', keyPath: 'date'}, recordhist);
-                
-                // db.put({name: 'STATSDB', keyPath: 'date'}, recordmiss);
-                // records = [
-                //     { date: now, statname: 'cache_hits', value: data.Cache_Hits },
-                //     { date: now, statname: 'cache_miss', value: data.Cache_Misses },
-                // ];
-                // req = db.put({name: 'STATSDB', keyPath: 'date'}, records);
-                // db.put( [{name: 'STATSDB', keyPath: 'date' }, recordhist , {name: 'STATSDB', keyPath: 'date' }, recordmiss ] );
-                // req = db.put( 'STATSDB', [ recordhist, recordmiss ] );
-                req.done(function(key) {
-                    console.log(key);
+                db.transaction(function(tx) {
+                    var hits = parseInt(data.Cache_Hits);
+                    var miss = parseInt(data.Cache_Misses);
+                    tx.executeSql("insert into stats(statname, statvalue) values ('cache_hits', ?)",[hits]);
+                    tx.executeSql("insert into stats(statname, statvalue) values ('cache_misses', ?)",[miss]);
                 });
-                req.fail(function(e) {
-                    throw e;
-                });
-                // db.put('STATSDB', [ { date: now, statname: 'cache_hits', value: data.Cache_Hits }, { date: now, statname: 'cache_miss', value: data.Cache_Misses } ])
             }, "json");
-        }, 5000);
+            }, 5000);
 
         // Barchart client request
         var request_options = {
@@ -129,16 +99,17 @@
             $.get("/api/cache_stats/", function(data) {
                 request_data.setValue(0, 1, parseInt(data.Client_Requests));
                 request_chart.draw(request_data, request_options);
-                var now = new Date();
-                // recordclireq = { date: now, statname: 'client_requests', value: data.Client_Requests };
-                // db.put({name: 'STATSDB', keyPath: 'date'}, recordclireq);
+                db.transaction(function(tx) {
+                    var reqs = parseInt(data.Client_Requests);
+                    tx.executeSql("insert into stats(statname, statvalue) values ('client_requests', ?)",[reqs]);
+                });
             }, "json");
-        }, 5000);
+            }, 5000);
 
         // Line chart Client requests with websql history
         var statsarray = new Array();
         db.transaction(function (tx) {
-            tx.executeSql('SELECT date, value FROM stats where statname="client_requests"', [], 
+            tx.executeSql('SELECT statdate, value FROM stats where statname="client_requests"', [], 
                 function (tx, results) {
                     var len = results.rows.length, i;
                     
@@ -157,6 +128,8 @@
             vAxis: {maxValue: 10}
             }
         );
+
+    
     }
     
     google.setOnLoadCallback(drawCharts);
