--- a/templates/frontend/dashboard.html
+++ b/templates/frontend/dashboard.html
@@ -1,124 +1,116 @@
 <script type='text/javascript' src='https://www.google.com/jsapi'></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="/static/reqps.js"></script>
 <script type="text/javascript">
-    
-    function drawCharts(){
-        // Init stats db
-        var db = openDatabase('STATSDB', '1.0', 'Stats DB', 100 * 1024);
-        db.transaction(function(tx) {
-            tx.executeSql("create table if not exists stats(statdate TIMESTAMP DEFAULT (datetime('now','localtime')), statname TEXT, statvalue INTEGER DEFAULT 0)");
-            // Delete records older of 1 day
-            tx.executeSql("delete from stats where statdate < datetime('now','localtime','-1 day');");
-        });
+ // Init stats db
+var db = openDatabase('STATSDB', '1.0', 'Stats DB', 100 * 1024);
+db.transaction(function(tx) {
+    tx.executeSql("create table if not exists stats(statdate TIMESTAMP DEFAULT (datetime('now','localtime')), statname TEXT, statvalue INTEGER DEFAULT 0)");
+    // Delete records older of 1 day
+    tx.executeSql("delete from stats where statdate < datetime('now','localtime','-1 day');");
+});   
 
-        // Gauge cachehitrate
-        var hitrate_data = google.visualization.arrayToDataTable([
-            ['Label', 'Value'],
-            ['HitRate %', {{ cache_stats.Hitrate }}]
-        ]);
+function drawCharts(){
+    // Gauge cachehitrate
+    var hitrate_data = google.visualization.arrayToDataTable([
+        ['Label', 'Value'],
+        ['HitRate %', {{ cache_stats.Hitrate }}]
+    ]);
 
-        var hitrate_options = {
-            width: 400, height: 120,
-            redFrom: 0, redTo: 20,
-            yellowFrom:20, yellowTo: 40,
-            greenFrom:80, greenTo: 100,
-            minorTicks: 5
-            }
-        
-        var hitrate_chart = new google.visualization.Gauge(document.getElementById('hitrate_div'));
-        hitrate_chart.draw(hitrate_data, hitrate_options);
-        setInterval(function() {
-            $.get("/api/cache_stats/", function(data) {
-                hitrate_data.setValue(0,1, data.Hitrate);
-                hitrate_chart.draw(hitrate_data, hitrate_options);
-            }, "json");
-            }, 5000);
-
-
-        var memory_data = google.visualization.arrayToDataTable([
-            ['Label', 'Value'],
-            ['Memory Usage', {{ memory_stats.MBytes_allocated }}]
-        ]);
-
-        memory_chart = new google.visualization.Gauge(document.getElementById('memory_div')).draw(memory_data,
-            {
-            width: 400, height: 120,
-            // redFrom: 220 , redTo: 250,
-            // yellowFrom:70, yellowTo: 90,
-            // greenFrom:00, greenTo: 30,
-            minorTicks: 5,
-            max: {{ memory_stats.MBytes_available }}
-            }
-            );
-
-        // Barchart hits-misses
-        var hitmiss_options = {
-            title:"Hits - Misses",
-            width:600, height:200,
-            legend: 'none',
-            colors: ['green'],
-            // vAxis: {title: 'HITS',  titleTextStyle: {color: 'red'}},
+    var hitrate_options = {
+        width: 400, height: 120,
+        redFrom: 0, redTo: 20,
+        yellowFrom:20, yellowTo: 40,
+        greenFrom:80, greenTo: 100,
+        minorTicks: 5
         }
-        var hitmiss_data = google.visualization.arrayToDataTable([
-            ['Label', 'Value'],
-            ['Cache Hits', {{ cache_stats.Cache_Hits }}],
-            ['Cache Misses', {{ cache_stats.Cache_Misses }}]
-        ]);
-        var hitmiss_chart = new google.visualization.ColumnChart(document.getElementById('hitrequest_div'));
-        hitmiss_chart.draw(hitmiss_data, hitmiss_options);
+    
+    var hitrate_chart = new google.visualization.Gauge(document.getElementById('hitrate_div'));
+    hitrate_chart.draw(hitrate_data, hitrate_options);
+    
+    var memory_data = google.visualization.arrayToDataTable([
+        ['Label', 'Value'],
+        ['Memory Usage', {{ memory_stats.MBytes_allocated }}]
+    ]);
 
-        setInterval(function() {
-            $.get("/api/cache_stats/", function(data) {
-                
-                // executeSQL('SELECT title FROM movies WHERE id = ?', [id]);
-                hitmiss_data.setValue(0, 1, parseInt(data.Cache_Hits));
-                hitmiss_data.setValue(1, 1, parseInt(data.Cache_Misses));
-                hitmiss_chart.draw(hitmiss_data, hitmiss_options);
-                db.transaction(function(tx) {
-                    var hits = parseInt(data.Cache_Hits);
-                    var miss = parseInt(data.Cache_Misses);
-                    tx.executeSql("insert into stats(statname, statvalue) values ('cache_hits', ?)",[hits]);
-                    tx.executeSql("insert into stats(statname, statvalue) values ('cache_misses', ?)",[miss]);
-                });
-            }, "json");
-            }, 5000);
+    memory_chart = new google.visualization.Gauge(document.getElementById('memory_div')).draw(memory_data,
+        {
+        width: 400, height: 120,
+        minorTicks: 5,
+        max: {{ memory_stats.MBytes_available }}
+        }
+        );
 
-        // Barchart client request
-        var request_options = {
-            title:"Client Requests",
+    // Barchart hits-misses
+    var hitmiss_options = {
+        title:"Hits - Misses",
             width:600, height:200,
-            legend: 'none'
-        }
-        var request_data = google.visualization.arrayToDataTable([
-            ['Label', 'Value'],
-            ['Client Requests', {{ cache_stats.Client_Requests }}]
-        ]);
-        var request_chart = new google.visualization.ColumnChart(document.getElementById('req_div'));
-        request_chart.draw(request_data, request_options);
-
-        setInterval(function() {
-            $.get("/api/cache_stats/", function(data) {
-                request_data.setValue(0, 1, parseInt(data.Client_Requests));
-                request_chart.draw(request_data, request_options);
-                db.transaction(function(tx) {
-                    var reqs = parseInt(data.Client_Requests);
-                    tx.executeSql("insert into stats(statname, statvalue) values ('client_requests', ?)",[reqs]);
-                });
-            }, "json");
-            }, 5000);
-
-            
+        legend: 'none',
+        colors: ['green'],
+        // vAxis: {title: 'HITS',  titleTextStyle: {color: 'red'}},
     }
-    
-    google.setOnLoadCallback(drawCharts);
-    google.load("visualization", "1", {packages:["corechart","gauge",]});
+    var hitmiss_data = google.visualization.arrayToDataTable([
+        ['Label', 'Value'],
+        ['Cache Hits', {{ cache_stats.Cache_Hits }}],
+        ['Cache Misses', {{ cache_stats.Cache_Misses }}]
+    ]);
+    var hitmiss_chart = new google.visualization.ColumnChart(document.getElementById('hitrequest_div'));
+    hitmiss_chart.draw(hitmiss_data, hitmiss_options);
 
-    
+    // Barchart client request
+    var request_options = {
+        title:"Client Requests",
+            width:600, height:200,
+        legend: 'none'
+        }
+    var request_data = google.visualization.arrayToDataTable([
+        ['Label', 'Value'],
+        ['Client Requests', {{ cache_stats.Client_Requests }}]
+    ]);
+    var request_chart = new google.visualization.ColumnChart(document.getElementById('req_div'));
+    request_chart.draw(request_data, request_options);
+
+    // Make the refresh of stats on graphs
+    setInterval(function() {
+        $.get("/api/cache_stats/", function(data) {
+            request_data.setValue(0, 1, parseInt(data.Client_Requests));
+            request_chart.draw(request_data, request_options);
+            hitrate_data.setValue(0,1, data.Hitrate);
+            hitrate_chart.draw(hitrate_data, hitrate_options);
+            hitmiss_data.setValue(0, 1, parseInt(data.Cache_Hits));
+            hitmiss_data.setValue(1, 1, parseInt(data.Cache_Misses));
+            hitmiss_chart.draw(hitmiss_data, hitmiss_options);
+
+            db.transaction(function(tx) {
+                var reqs = parseInt(data.Client_Requests);
+                var hits = parseInt(data.Cache_Hits);
+                var miss = parseInt(data.Cache_Misses);
+                tx.executeSql("insert into stats(statname, statvalue) values ('client_requests', ?)",[reqs]);
+                tx.executeSql("insert into stats(statname, statvalue) values ('cache_hits', ?)",[hits]);
+                tx.executeSql("insert into stats(statname, statvalue) values ('cache_misses', ?)",[miss]);
+
+            });
+        }, "json");
+        }, 5000);
+}
+google.setOnLoadCallback(drawCharts);
+google.load("visualization", "1", {packages:["corechart","gauge",]});
 </script>
 
-<div id="dashboard">
-    <div id="hitrate_div" style="left: 20%; width: 140px; position: fixed;"></div>
-    <div id="memory_div" style="left: 20%; width: 140px; position: relative;"></div>
-    <div id="hitrequest_div"></div>
-    <div id="req_div"></div>
-    <div id="reqline_div"></div>"
-</div>
+<table>
+    <tr>
+        <td><div id="hitrate_div"></div></td>
+        <td><div id="memory_div"></div></td>
+        <td><div id="container" style="min-width: 500px; height: 150px; margin: 0 auto;"></div></td>
+    </tr>
+</table>
+    <tr>
+        <div id="hitrequest_div"></div>
+    </tr>
+    <tr>
+        <div id="req_div"></div>
+    </tr>
+    <tr>
+        <div id="reqline_div"></div>
+    </tr>
