--- a/templates/frontend/reqps.html
+++ b/templates/frontend/reqps.html
@@ -1,14 +1,10 @@
-<html>
-<head>
-	<script type="text/javascript">
-	</script>
-	<script src="/static/jquery.min.js"></script>
-	<script src="http://code.highcharts.com/highcharts.js"></script>
-	<script src="http://code.highcharts.com/modules/exporting.js"></script>
-    <script src="/static/reqps.js"></script>
-</head>
+{% block head %}
+		<script src="/static/jquery.min.js"></script>
+		<script src="http://code.highcharts.com/highcharts.js"></script>
+		<script src="http://code.highcharts.com/modules/exporting.js"></script>
+		<script src="/static/reqps.js"></script>
+{% endblock %}
 
-<body>
-<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
-</body>
-</html>
+{% block body %}
+		<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+{% endblock %}
