--- a/templates/frontend/reqps.html
+++ b/templates/frontend/reqps.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% load i18n %}
+
 {% block head %}
 		<script src="/static/jquery.min.js"></script>
 		<script src="http://code.highcharts.com/highcharts.js"></script>
