Return to old dashboard

--- a/templates/frontend/reqps.html
+++ b/templates/frontend/reqps.html
@@ -1,9 +1,7 @@
-{% extends "frontend/header.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block head %}
-	{{ block.super }}
 		<script src="/static/jquery.min.js"></script>
 		<script src="http://code.highcharts.com/highcharts.js"></script>
 		<script src="http://code.highcharts.com/modules/exporting.js"></script>
@@ -11,18 +9,5 @@
 {% endblock %}
 
 {% block body %}
-	{{ block.super }}
-	 <!-- Left menu with stats results -->
-        <div class="tabbable tabs-left" id="stats">
-        	<ul class="nav nav-tabs">
-        		<li><a href="/">Dashboard</a></li>
-        		<li><a href="#tab2" data-toggle="tab">Statistics</a></li>
-        		<li class="active"><a href="/reqps/" >Client Requests</a></li>
-        	</ul>
-
-        	<div class="tab-content">
-        <div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>		
-        	</div>
-        </div>
-		
+		<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 {% endblock %}
